--- a/templates/Generate_TestCases.html
+++ b/templates/Generate_TestCases.html
@@ -492,8 +492,22 @@
 <script>
 function runPythonScript() {
 	document.getElementById('loadingSpinner').style.display = 'inline-block';
-
-    var pythonScriptPath = "AzureOpenAI_Demo.py";
+    var selectedLanguage = document.getElementById('languageDropdown').value;
+    var pythonScriptPath;
+    switch (selectedLanguage) {
+        case 'robot_framework':
+            pythonScriptPath = 'AzureOpenAI_Robot.py';
+            break;
+        case 'java_selenium':
+            pythonScriptPath = 'AzureOpenAI_java.py';
+            break;
+        case 'python_selenium':
+            pythonScriptPath = 'AzureOpenAI_python.py';
+            break;
+        default:
+            // Handle unexpected values or provide a default script path
+            break;
+    }
     var inputText = document.getElementById('inputTextArea').value;
 
     // Make an AJAX request to your Flask server
@@ -557,16 +571,31 @@ document.getElementById('clearBtn').addEventListener('click', function () {
   });
 
   // File Download Function
-  function downloadFile(content, fileName) {
+function downloadFile(content, fileName) {
     var blob = new Blob([content], { type: 'text/plain' });
-    var a = document.createElement('a');
-    a.href = URL.createObjectURL(blob);
-    a.download = fileName;
-    a.style.display = 'none';
-    document.body.appendChild(a);
-    a.click();
-    document.body.removeChild(a);
-  }
+    var link = document.createElement('a');
+    link.href = window.URL.createObjectURL(blob);
+    link.download = fileName;
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+}
+  
+  // Copy to Clipboard Button
+document.getElementById('copyBtn').addEventListener('click', function() {
+    var outputText = document.getElementById('outputTextArea').value;
+    copyToClipboard(outputText);
+});
+
+// Copy to Clipboard Function
+function copyToClipboard(content) {
+    const textarea = document.createElement('textarea');
+    textarea.value = content;
+    document.body.appendChild(textarea);
+    textarea.select();
+    document.execCommand('copy');
+    document.body.removeChild(textarea);
+}
 </script>
 
 </body>
