--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="Generate.html">Generate unit test cases</a>
+						<a class="collapse-item" href="Generate.html">Find Security vulnerabilities</a>
                         <a class="collapse-item" href="Generate.html">Convert Code</a>
                         <a class="collapse-item" href="Generate.html">Optimize code</a>
                         <a class="collapse-item" href="Generate.html">Code Reverse Engineering</a>
@@ -102,6 +103,7 @@
                         <a class="collapse-item" href="Generate.html">Convert Code</a>
                         <a class="collapse-item" href="Generate.html">Optimize test cases</a>
                         <a class="collapse-item" href="Generate.html">Code Reverse Engineering</a>
+						<a class="collapse-item" href="Generate.html">Generate Test Data</a>
                     </div>
                 </div>
             </li>
