--- a/templates/Generate_TestCasesMetlifePOC.html
+++ b/templates/Generate_TestCasesMetlifePOC.html
@@ -439,16 +439,30 @@
             font-weight: bold;
         }
 		
-  #testDataFrame {
+    #testDataFrame {
+        display: block;
+        height: 30%;
+        background-color: black !important;
+        overflow: hidden; /* Ensure no content spills out */
+    }
+
+    #testDataTextArea {
+        color: white !important;
+        background-color: black !important;
         width: 100%;
-        height: 50%; /* Set initial height */
-        display: none; /* Initially hide the testDataFrame */
+        height: 100%;
+        box-sizing: border-box; /* Include padding and border in total height/width */
+        resize: none; /* Disable textarea resizing */
     }
 
     #outputTextArea {
         width: 100%;
-        height: 100%; /* Set initial height */
+        height: 100%;
+        background-color: black;
+        color: white;
+	
     }
+
 </style>
 
 </head>
