--- a/templates/Code_Documentation.html
+++ b/templates/Code_Documentation.html
@@ -438,6 +438,14 @@
             text-align: left;
             font-weight: bold;
         }
+		
+		    #outputTextArea {
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        color: white;
+	
+    }
 </style>
 
 </head>
